fix(docs): production url and genearate docs
